--- a/public/css/style.less
+++ b/public/css/style.less
@@ -20,7 +20,6 @@
   -moz-border-radius: @size / 2 + 0px;
   border-radius: @size / 2 + 0px;
 }
-
 .gradient-circle(@size: 0, @center-color: rgba(255,255,255,1),
                  @mid-color: rgba(255,255,255,1), @edge-color: rgba(255,255,255,0)){
     width: @size;
@@ -31,7 +30,6 @@
     background: -moz-radial-gradient(circle, @center-color, @mid-color, @edge-color); /* For Fx 3.6 to 15 */
     background: radial-gradient(circle, @center-color, @mid-color, @edge-color); /* Standard syntax (must be last) */
 }
-
 .shadow(@color: #000, @size: 12px) {
    -moz-box-shadow:    inset 0 0 @size @color;
    -webkit-box-shadow: inset 0 0 @size @color;
@@ -39,6 +37,9 @@
 }
 
 // General element styles
+.amaranth {
+  font-family: 'amaranthregular', sans-serif;
+}
 
 // Colour Classes
 .pos-40 {  background-color: @pos-40; }
@@ -65,6 +66,52 @@
 .navbar {
   margin-bottom: 0px;
 }
+
+// Button style based on: http://cssdeck.com/labs/beautiful-flat-buttons
+button { 
+  position: relative;
+  vertical-align: top;
+  width: 100%;
+  display: inline-block;
+  height: 60px;
+  padding: 0;
+  margin: 0px 0px 12px 0px;
+  font-size: 22px;
+  color: @dark-blue;
+  text-align: center;
+  background: @light-green;
+  border: 0;
+  border-bottom: 2px solid @dark-green;
+  cursor: pointer;
+  -webkit-box-shadow: inset 0 -2px @dark-green;
+  box-shadow: inset 0 -2px @dark-green;
+      
+ .glyphicon {
+    margin-right: 12px;
+  }
+}
+button:active {
+  top: 1px;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+button.btn-med {
+  width: 150px;
+}
+
+///
+//  INDEX PAGE
+///
+.jumbotron {
+  background: url('https://files.slack.com/files-pri/T050M901W-F06AJPJPK/ideation53_productfinal.jpg') no-repeat center center;
+  background-size: cover;
+ }
+
+
+///
+// DEMO OVERVIEW PAGE
+///
 
 .demo-container {
   background-color: @light-blue;
@@ -150,39 +197,6 @@
     margin-left: 0px;
     margin-right: 12px;
   }
-  // Button style based on: http://cssdeck.com/labs/beautiful-flat-buttons
-  button { 
-    position: relative;
-    vertical-align: top;
-    width: 100%;
-    display: inline-block;
-    height: 60px;
-    padding: 0;
-    margin: 0px 0px 12px 0px;
-    font-size: 22px;
-    color: @dark-blue;
-    text-align: center;
-    background: @light-green;
-    border: 0;
-    border-bottom: 2px solid @dark-green;
-    cursor: pointer;
-    -webkit-box-shadow: inset 0 -2px @dark-green;
-    box-shadow: inset 0 -2px @dark-green;
-      
-    .glyphicon {
-      margin-right: 12px;
-    }
-  }
-  button:active {
-    top: 1px;
-    outline: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-  }
-  button.btn-half {
-    width: 40%;
-  }
-
 }
 
 // Navbar
@@ -191,12 +205,68 @@ nav.navbar-static-top {
   background-image: none;
   border-bottom: 0px;
   font-size: 18px;
-  text-shadow: 0px;
-  
+
   a.navbar-brand, a.navbar-brand:hover {
     color: @dark-blue;
+    text-shadow: 0px;
+    .amaranth;
   }
   ul.nav a {
     color: @dark-blue;
   }
+}
+
+.navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav > li > a {     
+  text-shadow: none;
+}
+
+// Objects Page
+.location-info {
+  background-color: #fff;
+}
+// Resets 
+.graph-container,
+.graph-container div,
+.graph-container a,
+.graph-container span {
+    margin: 0;
+    padding: 0;
+}
+// Gradient and Rounded Corners
+.graph-container, #tooltip, .graph-info a {
+    background: #ffffff;
+    background: -moz-linear-gradient(top, #ffffff 0%, #f9f9f9 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#f9f9f9));
+    background: -webkit-linear-gradient(top, #ffffff 0%,#f9f9f9 100%);
+    background: -o-linear-gradient(top, #ffffff 0%,#f9f9f9 100%);
+    background: -ms-linear-gradient(top, #ffffff 0%,#f9f9f9 100%);
+    background: linear-gradient(to bottom, #ffffff 0%,#f9f9f9 100%);
+ 
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+// Graph Container
+.graph-container {
+    position: relative;
+    width: 550px;
+    height: 300px;
+    padding: 20px;
+ 
+    -webkit-box-shadow: 0px 1px 2px rgba(0,0,0,.1);
+    -moz-box-shadow: 0px 1px 2px rgba(0,0,0,.1);
+    box-shadow: 0px 1px 2px rgba(0,0,0,.1);
+}
+ 
+.graph-container > div {
+    position: absolute;
+    width: inherit;
+    height: inherit;
+    top: 10px;
+    left: 25px;
+}
+ 
+.graph-info {
+    width: 590px;
+    margin-bottom: 10px;
 }
